// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations - Negative Tests Not Logged In. add a post 1`] = `
Object {
  "data": Object {
    "addPost": null,
  },
  "errors": Array [
    [GraphQLError: Not Logged In.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Negative Tests Not Logged In. like a post 1`] = `
Object {
  "data": Object {
    "likePost": null,
  },
  "errors": Array [
    [GraphQLError: Not Logged In.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Negative Tests Not Logged In. update my info 1`] = `
Object {
  "data": Object {
    "updateMyInfo": null,
  },
  "errors": Array [
    [GraphQLError: Not Logged In.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Negative Tests login with false email 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: Email Account Not Exists],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Negative Tests login with false password 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: Wrong Password],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Negative Tests signup with duplicate email 1`] = `
Object {
  "data": Object {
    "signUp": null,
  },
  "errors": Array [
    [GraphQLError: User Email Duplicate],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Positive Tests add a post 1`] = `
Object {
  "data": Object {
    "addPost": Object {
      "author": Object {
        "id": "1",
        "name": "fx",
      },
      "body": "testinggggg",
      "id": "3",
      "title": "Hello World2",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Positive Tests like a post 1`] = `
Object {
  "data": Object {
    "likePost": Object {
      "author": Object {
        "name": "Kevin",
      },
      "body": "Hello My Friend!",
      "id": "2",
      "likeGivers": Array [
        Object {
          "age": 100,
          "id": "1",
          "name": "fx",
        },
      ],
      "title": "Nice Day",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Positive Tests update my info 1`] = `
Object {
  "data": Object {
    "updateMyInfo": Object {
      "age": 100,
      "email": "fong@test.com",
      "id": "1",
      "name": "fx",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
